--- a/apps/maintenance/index.html
+++ b/apps/maintenance/index.html
@@ -91,7 +91,7 @@
         <div class="title-container">
           <img
             class="ebrains-icon-small"
-            src="https://object.cscs.ch/v1/AUTH_c0a333ecf7c045809321ce9d9ecdfdea/EBRAINS_live_papers/resources/logos/EBRAINS.png"
+            src="https://data-proxy.ebrains.eu/api/v1/buckets/pc0a33-EBRAINS_live_papers/resources/logos/EBRAINS.png"
             alt="EBRAINS logo"
             style="width: 50px; height: 50px; vertical-align: middle"
           />
